--- a/style.css
+++ b/style.css
@@ -103,8 +103,8 @@ body.multiple-scenes.mobile #titleBar {
   width: 40px;
   height: 40px;
   padding: 5px;
-  background-color: rgb(103,115,131);
-  background-color: rgba(103,115,131,0.8);
+  background-color: rgb(50, 70, 168);
+  background-color: rgba(50, 70, 168,0.8);
 }
 
 .mobile #fullscreenToggle {
@@ -207,8 +207,8 @@ body.fullscreen-enabled.mobile #autorotateToggle {
   width: 40px;
   height: 40px;
   padding: 5px;
-  background-color: rgb(103,115,131);
-  background-color: rgba(103,115,131,0.8);
+  background-color: rgb(50, 70, 168);
+  background-color: rgba(50, 70, 168,0.8);
 }
 
 .mobile #sceneListToggle {
